--- a/EAM.csproj
+++ b/EAM.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="devexpress.wpf.charts" Version="21.1.5" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0-ci82" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
